@@ -24,6 +24,7 @@
         * [BUGFIX]: #2945 Fixed manual reordering of database objects with Drag&Drop.
         * [BUGFIX]: #2954 #2803 #2937 Fixed incorrect recreation of foreign keys chain.
         * [BUGFIX]: #3055 Fixed crash when exporting on MacOS using plugin that requires column value length information (such as PDF export plugin).
+        * [BUGFIX]: #3047 Fixed copying/moving tables together with indexes or triggers with Drag&Drop across same SQLite version databases.
 
 [3.0.7]
         * [ADDED]: #2951 Implemented dropdown value picking for foreign key columns in grid view.
